Closed Bug 26508 Opened 26 years ago Closed 26 years ago

select in prefs doesn't scroll

Categories

(Core :: XUL, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: rzach, Assigned: blizzard)

References

Details

(Keywords: platform-parity, relnote, Whiteboard: [PDT-])

Attachments

(2 files)

The drop down menus in the font pref panel don't scroll. Toreproduce: 1. Open font prefs panel 2. Click on one of the font face select widgets 3. Click in scrollbar Actual result: nothing happens Expected result: font list should scroll Linux build 2000.02.02.09 First thought this was just a problem with the length of the selection list and thus a widget problem. But I tested it with an HTML select field with about 2000 options, and it worked fine (if slowly).
Bulk move of all Pref UI component bugs to new Preferences component. Pref UI component will be deleted.
Component: Pref UI → Preferences
*** Bug 28681 has been marked as a duplicate of this bug. ***
Target Milestone: M15
Can't use font prefs without this.
Keywords: beta1
*** Bug 29480 has been marked as a duplicate of this bug. ***
Thanks for pointing me to the right bug, Zach (it didn't show up in the bugzilla list of Preferences bugs, and I don't know why). This is a real pain for playing around with prefs, as I'm sure nobody wants font adjustment in the beta release to require manual prefs file editing (as it does currently for me).
is this still a problem for you? perhaps it because i don't have enough fonts installed on either my linux or winNT box, but i don't even see scrollbars on the font droplists... (i do see the scrollbars on the font lists on my mac, and they do scroll.) tested with opt comm bits, 2000022808.
Keywords: pp
Yes, still broken on 2000.02.27.09. When the select menu drops down, I can only select the fonts displayed. Clicking in the scroll bar doesn't have an effect.
This happens for any select in the preferences. Happens on search also. Looks like the scroll bar is there since it is dynamically built. Otherwise i'm not sure how you can get a scrollbar on a drop down list.
Assignee: matt → rods
Summary: Font face selection in font prefs doesn't scroll → select in prefs doesn't scroll
marking PDT+, on the proviso that it's fixed by 3/3.
Whiteboard: [PDT+]
waqar, isn't this the same bug as last week?
Assignee: rods → waqar
*** Bug 29223 has been marked as a duplicate of this bug. ***
After talking to pavlov, we came to the conclusion that to fix this would require lots of rewriting of GTK code, and I would be fixed by rod's gfx scroll for select.
Depends on: 18895
This bug depends on 18895... but that bug is NOT marked PDT+ The last comment acts like this bug is "waiting" for that checkin :-/. I'm going to remove the PDT+ marking on this, and let the PDT either mark both bugs as PDT+, or get this one off the radar. Please correct me if I misunderstood. Thanks, Jim
Whiteboard: [PDT+]
I'm curious about this bug. I'm going to take a look at it. It sounds like a grab problem to me.
Assignee: waqar → blizzard
PDT-
Keywords: relnote
Whiteboard: [PDT-]
*** Bug 29998 has been marked as a duplicate of this bug. ***
*** Bug 29978 has been marked as a duplicate of this bug. ***
*** Bug 30538 has been marked as a duplicate of this bug. ***
*** Bug 30665 has been marked as a duplicate of this bug. ***
I know what's causing this and I've been working on a patch. It's a kinda complicated event problem. However, I don't want to waste my time on this since it's been PDT-'ed.
This should be a PDT+ bug....
Status: NEW → ASSIGNED
Attached patch patchSplinter Review
Patch attached. Waiting for a review.
*** Bug 32173 has been marked as a duplicate of this bug. ***
*** Bug 29142 has been marked as a duplicate of this bug. ***
*** Bug 29142 has been marked as a duplicate of this bug. ***
Fix checked in. I rewrote the superwin event filter to handle grabs better. That code was a sewer and needed to be rewritten and documented anyway.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
*** Bug 32330 has been marked as a duplicate of this bug. ***
Is this in the nightly builds yet? Still doesn't work. Tested with 2000031806 (nb1b) and 2000031808
You can now select fonts, but build 2000.03.18.08 still does not scroll the font list. This might not be as resolved as it appears.
Maybe I don't have enough fonts installed. I don't have a scrollbar in my font list.
Ok, I installed enough fonts on my system to get the scrollbar and I see the problem now. Re-opening to fix it.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Another day, another patch. This should fix the problem where there's a GtkWidget ( i.e. a scrollbar ) on a GdkWindow that has had gdk_pointer_grab() called on it. Looking for a review. Pav? It's easy, it's well commented.
Status: REOPENED → ASSIGNED
pavlov has reviewed.
The GtkWidget (ie. scrollbar) should also capture the up/down arrow keys, pgup/pgdn, etc, appropriately, which it does not right now, as pressing those keys goes to the next/previous option-set, and consequently crashes the browser.
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
qa -> jrgm
Component: Preferences → XP Toolkit/Widgets
QA Contact: sairuh → jrgm
*** Bug 32827 has been marked as a duplicate of this bug. ***
This is marked fixed, but it is demonstrably broken in Build 2000032305 i686-pc-linux-gnu. Scrollbars on pref combo boxes do not respond to mouse input. The lists themselves will drag-scroll down but will not to the same in the other direction. I recommend reopening this bug, unless it simply hasn't propogated to nightlies yet.
The only place that I've got a scrollbar in the prefs dialog is on the fonts selection and it works fine here. Are you seeing it somewhere else?
Sorry -- should have commented quickly earlier ... this is in the trunk, but not the beta1 branch. The build that jwbaker is using is a beta1 build. This works correctly for me on linux for the trunk build for today (2000032309) There is a problem with responding to key events (including a crash), but given: 1) the native scrollbar is due to go away 2) the exact response to what the scrollbar should do on certain keystrokes is unclear to me (I was looking at what it does for various situations on motif and gtk and it seems app-dependent -- I need to look at this some more). 3) the crash looks only semi-related to how the scrollbar behaves (it looks like the key event bubbles up, and it's the left-hand panel that gets the event and crashes) then I'll marked this as verified for the original bug report, and open a couple of other bugs -- one for the key event handling, and another for the crash.
Status: RESOLVED → VERIFIED
Thanks. When you open that bug, assign it to me.
Yep definitely fixed on the trunk. Sorry for the confusion, I don't usually use the nb1b builds.
well...no rest for the vicked. There IS still a problem - somewhere. For one, the scrollbar widgets in prefs respond slow - initially. Like there are double up of them - one set that doesn't work - then one that does, when it gets to think about it. Once it responds, it's quick enough. But after the first checking (gtk widget rewrite) that didn't fix the frozen scrollbar after all, a series of messages started to appear in the first nightly build published. Looks like this whenever a page with forms is loaded: -------------- #1 Bailing on aCachedAvailableSize.height -1 != kSizeNotSet -------------- #1 Bailing on aCachedAvailableSize.height -1 != kSizeNotSet -------------- #2.2 Bailing on width 1905 <= aCachedAvailableSize.width 1905 -------------- #1 Bailing on aCachedAvailableSize.height -1 != kSizeNotSet -------------- #2.2 Bailing on width 1905 <= aCachedAvailableSize.width 1905 -------------- #1 Bailing on aCachedAvailableSize.height -1 != kSizeNotSet -------------- #2.2 Bailing on width 1635 <= aCachedAvailableSize.width 1635 -------------- #1 Bailing on aCachedAvailableSize.height -1 != kSizeNotSet -------------- #2.2 Bailing on width 1635 <= aCachedAvailableSize.width 1635 -------------- #1 Bailing on aCachedAvailableSize.height -1 != kSizeNotSet -------------- #1 Bailing on aCachedAvailableSize.height -1 != kSizeNotSet -------------- #1 Bailing on aCachedAvailableSize.height -1 != kSizeNotSet and so forth - page up and page down in console. Now: after the second - superwin fix - was checked in - i today had a crash. I had two browser windows open, closed one and clicked a "back" in the other - and voila: Document http://bugzilla.mozilla.org/show_bug.cgi?id=27652 loaded successfully Document: Done (9.091 secs) WEBSHELL- = 6 WEBSHELL- = 5 WEBSHELL- = 4 Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' warning: attempted to CreateNative() without a superwin parent Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' warning: attempted to CreateNative() without a superwin parent Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Damn, brother. That's not a superwin. Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Damn, brother. That's not a superwin. Gdk-CRITICAL **: file gdkgc.c: line 288 (gdk_gc_unref): assertion `gc != NULL' failed. Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Gtk-WARNING **: invalid cast from (NULL) pointer to `GtkObject' Document http://bugzilla.mozilla.org/buglist.cgi?bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&rep_platform=PC&email1=&emailtype1=substring&emailassigned_to1=1&email2=&emailtype2=substring&emailreporter2=1&bugidtype=include&bug_id=&changedin=&votes=&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=border&short_desc_type=substring&long_desc=&long_desc_type=substring&bug_file_loc=&bug_file_loc_type=substring&status_whiteboard=&status_whiteboard_type=substring&keywords=&keywords_type=anywords&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&newqueryname=&order=Reuse+same+sort+as+last+time##1 loaded successfully Document: Done (9.658 secs) Gdk-CRITICAL **: file gdkwindow.c: line 1707 (gdk_window_get_parent): assertion `window != NULL' failed. Gdk-CRITICAL **: file gdkwindow.c: line 1707 (gdk_window_get_parent): assertion `window != NULL' failed. [dark@somewhere dark]$ These things are related. It's the first time i managed to achieve a crash though so the risk is minimal - but something is rotten in the state of scrollbars. There's a chance the fix needs a fix.
Please ignore the spam. Changing address.
Assignee: blizzard → blizzard
Status: VERIFIED → NEW
remarking FIXED. dark@c2i.net : if you are still having the other problems you noted with scrollbars, please file a new bug (limit of one defect per bug report :-]) By the way, the "Bailing ..." messages are actually good news (avoiding unnecessary work).
Status: NEW → RESOLVED
Closed: 26 years ago26 years ago
vrfy
Status: RESOLVED → VERIFIED
*** Bug 32177 has been marked as a duplicate of this bug. ***
filed bug 36430
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: