fix for bug #26508.  rewrite the main event hander for gtk to properly handle all the possible grab combinations properly.  this should fix problems with scrollbars on popups and on modal dialogs.